# Mahjoub_Online_WebApp

./: .env  Procfile  app  archive_manager.py  config.py  create_admin.py  database_fixer.py  db_init.py)  db_reset.py  deploy.bat  force_migrate.py  gitignore  init_db.py  inject_admin.py  pyproject.toml  render-build.sh  requirements.txt  run.py  run.sh  seed_admin.py  seed_db.py  vercel.json
admin_panel/: __init__.py  _init__.py  add_supplier_routes.py  auth.py  auth_controller.py  manage_suppliers.py  models.py  routes.py  supplier_service_routes.py  suppliers_logic.py
admin_panel/  templates/: login.html
admin_panel/templates/: add_supplier.html  admin_suppliers_management.html  base.html  dashboard.html  login.html  manage_suppliers.html  product_review.html
api/: index.py  webhook.py
apps/: __init__.py  extensions.py  migrator.py
apps/add_supplier/: __init__.py  routes.py
apps/admin_Product/: registry.py  routes.py  routes_add.py  routes_edit.py  routes_min_review_products.py  routes_sync.py
apps/admin_dashboard/: __init__.py  registry.py  routes.py
apps/admin_exchange/: registry.py  routes.py
apps/admin_financial_control/: registry.py
apps/admin_financial_management/: __init__.py  registry.py  routes.py
apps/admin_permissions/: registry.py  routes.py
apps/admin_platform_treasury/: routes.py  (+3 more)
core/: __init__.py  extensions.py  models.py  qumra_connector.py  security.py
migrations/: alembic.ini  env.py
models/: admin_db.py  supplier_db.py
services/: qumra_handler.py
supplier_panel/: __init__.py  auth_logic.py  decorators.py  routes.py
(+228 files in other folders)
