[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mahjoub-online"
version = "1.0.0"
description = "منصة الحوكمة الرقمية المتكاملة - محجوب أونلاين"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-login",
    "flask-migrate",
    "gunicorn",
    "werkzeug",
    "email-validator",
    "cryptography"
]

[tool.vercel]
# 🔑 نقطة دخول التطبيق: Vercel يحتاج إلى موديول وليس ملف نصي، لذا نستخدم "run:app"
# هذا السطر يخبر Vercel أن يستورد 'app' من الموديول 'run'
entrypoint = "run:app"

[tool.setuptools]
# حزمة التطبيق الرئيسية التي تحتوي على المنطق البرمجي
packages = ["apps"]
